RESOLVED FIXED127454
WKBrowsingContextController should not be an API wrapper around WebPageProxy
https://bugs.webkit.org/show_bug.cgi?id=127454
Summary WKBrowsingContextController should not be an API wrapper around WebPageProxy
Anders Carlsson
Reported 2014-01-22 16:36:04 PST
WKBrowsingContextController should not be an API wrapper around WebPageProxy
Attachments
Patch (11.56 KB, patch)
2014-01-22 16:36 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-01-22 16:36:24 PST
mitz
Comment 2 2014-01-22 18:18:39 PST
Comment on attachment 221923 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=221923&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKBrowsingContextControllerInternal.h:42 > -- (void)_finishInitialization; > + (NSMutableSet *)customSchemes; > > +- (instancetype)_initWithPageRef:(WKPageRef)pageRef; > ++ (WKBrowsingContextController *)_browsingContextControllerForPageRef:(WKPageRef)pageRef; Class methods before instance methods, please.
Anders Carlsson
Comment 3 2014-01-22 18:19:39 PST
Note You need to log in before you can comment on or make changes to this bug.