Source/WebKit2/Shared/mac/ObjCObjectGraphCoders.mm
@@ -351,7 +351,7 @@ public:
             if (!webPage)
                 coder.m_root = [NSNull null];
             else 
-                coder.m_root = wrapper(*webPage);
+                coder.m_root = [WKBrowsingContextController _browsingContextControllerForPageRef:toAPI(webPage)];
             break;
         }
         case WKTypeRefWrapperType: {
